# de-zoomcamp-project

./: .gitignore  AGENTS.md  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pipeline.yml
.sisyphus/: boulder.json
.sisyphus/notepads/github-actions-bruin-pipeline/: learnings.md
.sisyphus/plans/: github-actions-bruin-pipeline.md
maddison-project-pipeline/: AGENTS.md  README.md  pipeline.yml
maddison-project-pipeline/assets/ingestion/: download_to_gcs.py  gcs_to_bigquery.asset.yml
maddison-project-pipeline/assets/reports/: gdp_bubble_map.sql  latest_report.sql  regional_gdp_growth.sql  regional_gdp_share.sql
maddison-project-pipeline/assets/staging/: gdp_population.sql
terraform/: main.tf  outputs.tf  variables.tf
